fixed flow overflow

--- a/authenticSeries.css
+++ b/authenticSeries.css
@@ -57,5 +57,6 @@ h3 {
     height: 325px;
     width: 90vw;
     border: solid, 1px, rgb(238, 244, 244);
+    overflow: scroll;
 }
 
